tests/error_display/test_hll_defer_loan_conflict.si

        fn f() {
            let mut x = 1;
            let r = &x;
            defer { let y = r.*; };
            x = 2;
        }
    